--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@novu/node": "^0.22.0",
     "@novu/notification-center": "^0.22.0",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-table": "^8.10.7",
