--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
         env:
           X_API_KEY: ${{ secrets.X_API_KEY }}
         run: |
-          curl --location 'https://novu-thititongumpun.koyeb.app/todo' \
+          curl --location --request POST 'https://novu-thititongumpun.koyeb.app/todo' \
           --header "x-api-key: $X_API_KEY" \
           --header 'Accept: application/json' \
           --header 'Content-Type: application/json'
