--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "lucide-react": "^0.294.0",
+    "million": "^2.6.4",
     "next": "14.0.4",
     "next-pwa": "^5.6.0",
     "react": "^18",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
+    "sharp": "^0.33.1",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
