--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "sharp": "^0.33.1",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^2.9.1",
+    "vaul": "^0.8.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
