--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-table": "^8.10.7",
     "@tiptap/extension-document": "^2.1.13",
+    "@tiptap/extension-hard-break": "^2.4.0",
     "@tiptap/extension-paragraph": "^2.1.13",
     "@tiptap/extension-text": "^2.1.13",
     "@tiptap/pm": "^2.1.13",
